Fix plus icon on mobile accordion view

--- a/source/assets/stylesheets/components/_roadmap.scss
+++ b/source/assets/stylesheets/components/_roadmap.scss
@@ -188,10 +188,14 @@
 
       h6 {
         position: relative;
+        padding-right: 44px;
+        @include media-breakpoint-down(sm) {
+            min-height: 44px + 10px;
+            padding-top: 11px;
+        }
 
         &:after {
           content: '';
-          display: block;
           width: 44px;
           height: 44px;
           position: absolute;
